--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/GiuliaB">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/cvdlab-cg/267055/tree/master/final-project">See the project Repo</a>
     <div class="shell">
 
       <header>
