--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>The Spinal Cord by GiuliaB</title>
+    <title>The Spinal Cord, a project by 267055</title>
   </head>
 
   <body>
@@ -25,6 +25,7 @@
     <div class="shell">
 
       <header>
+      
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>The Spinal Cord</h1>
@@ -35,9 +36,16 @@
         </span>
       </header>
 
-      <div id="no-downloads">
+      <div id="downloads">
         <span class="inner">
-        </span>
+          <a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/zipball/master" class="zip">
+			<em>download</em>
+				.ZIP
+			</a>
+			<a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/tarball/master" class="tgz">
+        	<em>download</em>
+				.TGZ
+       	</span>
       </div>
 
 
@@ -45,9 +53,12 @@
 
 
       <section id="main_content">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Introduction</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The spinal cord is a cable about 43cm in length running from the brain stem to the lower back. 
+It contains two types of tissue. The inner core is gray matter made up of nerve cell bodies,
+unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
+tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -90,3 +101,5 @@ $ git checkout gh-pages
     
   </body>
 </html>
+
+
