--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </span>
       </header>
 
-      <div id="downloads">
+      <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/zipball/master" class="zip">
+        	<a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/zipball/master" class="zip">
 			<em>download</em>
 				.ZIP
 			</a>
@@ -46,8 +46,7 @@
         	<em>download</em>
 				.TGZ
        	</span>
-      </div>
-
+      </section>
 
       <span class="banner-fix"></span>
 
