--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/tarball/master" class="tgz">
         	<em>download</em>
 				.TGZ
+				</a>
        	</span>
       </section>
 
@@ -52,7 +53,7 @@
 
 
       <section id="main_content">
-        <h3>Introduction</h3>
+        <h2 clas="header-level-2">Introduction</h2>
 
 <p>The spinal cord is a cable about 43cm in length running from the brain stem to the lower back. 
 It contains two types of tissue. The inner core is gray matter made up of nerve cell bodies,
