--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@ It contains two types of tissue. The inner core is gray matter made up of nerve 
 unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
 tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3 clas="header-level-3">Extent of spinal cord</h3>
+<p>
+During the body's growth and development, the spinal cord does not continue to lengthen the way that the spinal bones do: it 
+therefore occupies only the first two-thirds of vertebral column. Cylindrical and slightly flattened, the spinal cord is about as 
+thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
+called cauda equina.
+</p>
 
 <h3>Designer Templates</h3>
 
@@ -100,6 +101,12 @@ $ git checkout gh-pages
 
     
   </body>
+  
+  <pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+  
 </html>
 
 
