--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ It contains two types of tissue. The inner core is gray matter made up of nerve 
 unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
 tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.</p>
 
+<img src="http://www.daviddarling.info/images/spinal_cord_cut-away.jpg"/>
 <h3 clas="header-level-3">Extent of spinal cord</h3>
 <p>
 During the body's growth and development, the spinal cord does not continue to lengthen the way that the spinal bones do: it 
@@ -68,7 +69,11 @@ thick as a finger for most of its length; extending from the lower part if the s
 called cauda equina.
 </p>
 
-<h3>Designer Templates</h3>
+<h3 clas="header-level-3">Spinal nerves</h3>
+<p>
+Through 31 pairs of spinal nerves, the spinal cord is connected to the rest of the body; via these nerves, the spinal cord sends and receives
+information
+</p>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
