--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
       <section id="downloads">
         <span class="inner">
-        	<a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/zipball/master" class="zip">
+        	<a href="https://github.com/cvdlab-cg/267055/final-project/zipball/master" class="zip">
 			<em>download</em>
 				.ZIP
 			</a>
-			<a href="https://github.com/cvdlab-cg/267055/tree/master/final-project/tarball/master" class="tgz">
+			<a href="https://github.com/cvdlab-cg/267055/final-project/tarball/master" class="tgz">
         	<em>download</em>
 				.TGZ
 				</a>
@@ -58,9 +58,11 @@
 <p>The spinal cord is a cable about 43cm in length running from the brain stem to the lower back. 
 It contains two types of tissue. The inner core is gray matter made up of nerve cell bodies,
 unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
-tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.</p>
+tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.
 
 <img src="http://www.daviddarling.info/images/spinal_cord_cut-away.jpg"/>
+</p>
+
 <h3 clas="header-level-3">Extent of spinal cord</h3>
 <p>
 During the body's growth and development, the spinal cord does not continue to lengthen the way that the spinal bones do: it 
@@ -72,7 +74,10 @@ called cauda equina.
 <h3 clas="header-level-3">Spinal nerves</h3>
 <p>
 Through 31 pairs of spinal nerves, the spinal cord is connected to the rest of the body; via these nerves, the spinal cord sends and receives
-information
+information to and from the brain. The spinal nerves run through gaps between adjacent vertebrae and enter the back 
+and front of the spinal cord as spinal nerve root.
+
+<img src="http://www.free-ed.net/sweethaven/MedTech/NurseCare/pics/fig91902_04.jpg"/>
 </p>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
@@ -93,7 +98,7 @@ information
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/GiuliaB">GiuliaB</a> can be found on <a href="https://github.com/GiuliaB">GitHub</a></p>
+            <p>Projects by <a href="https://github.com/GiuliaB">GiuliaB</a> can be found on <a href="https://github.com/cvdlab-cg/267055/tree/master/final-project">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
