--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 It contains two types of tissue. The inner core is gray matter made up of nerve cell bodies,
 unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
 tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.
-
+</br>
 <img src="http://www.daviddarling.info/images/spinal_cord_cut-away.jpg"/>
 </p>
 
@@ -75,7 +75,7 @@ called cauda equina.
 <p>
 Through 31 pairs of spinal nerves, the spinal cord is connected to the rest of the body; via these nerves, the spinal cord sends and receives
 information to and from the brain. The spinal nerves run through gaps between adjacent vertebrae and enter the back 
-and front of the spinal cord as spinal nerve root.
+and front of the spinal cord as spinal nerve root. </br>
 
 <img src="http://www.free-ed.net/sweethaven/MedTech/NurseCare/pics/fig91902_04.jpg"/>
 </p>
