--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@ tracts of myelinated axons thath relay impulses to and from the spinal cord and 
 During the body's growth and development, the spinal cord does not continue to lengthen the way that the spinal bones do: it 
 therefore occupies only the first two-thirds of vertebral column. Cylindrical and slightly flattened, the spinal cord is about as 
 thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
-called cauda equina.
-</p>
+called cauda equina.</br>
+<img src="https://github.com/cvdlab-cg/267055/blob/master/final-project/material/Schermata%2007-2456127%20alle%2010.39.30.png"/>
 
+</p>
 <h3 clas="header-level-3">Spinal nerves</h3>
 <p>
 Through 31 pairs of spinal nerves, the spinal cord is connected to the rest of the body; via these nerves, the spinal cord sends and receives
@@ -82,7 +83,8 @@ and front of the spinal cord as spinal nerve root. </br>
 
  <h2 clas="header-level-2">The project</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named
+<p>First of all, i made some sketches of the spinal cord to better understand his structure and to obtain the points for the curve.
+</p>
  <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>Authors and Contributors</h3>
