--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ During the body's growth and development, the spinal cord does not continue to l
 therefore occupies only the first two-thirds of vertebral column. Cylindrical and slightly flattened, the spinal cord is about as 
 thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
 called cauda equina.</br>
-<img src="https://github.com/cvdlab-cg/267055/blob/master/final-project/material/Schermata%2007-2456127%20alle%2010.39.30.png"/>
+<img src="http://intranet.tdmu.edu.te.ua/data/kafedra/internal/anatomy/classes_stud/%D0%9C%D0%B5%D0%B4%D0%B8%D1%87%D0%BD%D0%B8%D0%B9%20%D1%84%D0%B0%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D0%B5%D1%82/1%20%D0%BA%D1%83%D1%80%D1%81/%D0%90%D0%BD%D0%B3%D0%BB%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B0/20%20SPINAL%20CORD.%20BASE%20OF%20THE%20BRAIN.%20TOPOGRAPHY%20OF%20CRANIAL%20NERVES.files/image009.gif"/>
 
 </p>
 <h3 clas="header-level-3">Spinal nerves</h3>
@@ -107,16 +107,7 @@ and front of the spinal cord as spinal nerve root. </br>
       </footer>
 
     </div>
-
-    
   </body>
-  
-  <pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-  <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
   
 </html>
 
