--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ During the body's growth and development, the spinal cord does not continue to l
 therefore occupies only the first two-thirds of vertebral column. Cylindrical and slightly flattened, the spinal cord is about as 
 thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
 called cauda equina.</br>
-<img src="http://intranet.tdmu.edu.te.ua/data/kafedra/internal/anatomy/classes_stud/%D0%9C%D0%B5%D0%B4%D0%B8%D1%87%D0%BD%D0%B8%D0%B9%20%D1%84%D0%B0%D0%BA%D1%83%D0%BB%D1%8C%D1%82%D0%B5%D1%82/1%20%D0%BA%D1%83%D1%80%D1%81/%D0%90%D0%BD%D0%B3%D0%BB%D1%96%D0%B9%D1%81%D1%8C%D0%BA%D0%B0/20%20SPINAL%20CORD.%20BASE%20OF%20THE%20BRAIN.%20TOPOGRAPHY%20OF%20CRANIAL%20NERVES.files/image009.gif"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/spinal3.png"/>
 
 </p>
 <h3 clas="header-level-3">Spinal nerves</h3>
@@ -84,8 +84,8 @@ and front of the spinal cord as spinal nerve root. </br>
  <h2 clas="header-level-2">The project</h2>
 
 <p>First of all, i made some sketches of the spinal cord to better understand his structure and to obtain the points for the curve.</br>
-<img src="https://github.com/giuliab/final-project/blob/master/material/base_sketch.jpg"/>
-<img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg"/>
+<img src="https://github.com/giuliab/final-project/material/base_sketch.jpg"/>
+<img src="https://github.com/giuliab/final-project/material/nerve_sketch.jpg"/>
 
 </p>
  <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
@@ -107,8 +107,8 @@ and front of the spinal cord as spinal nerve root. </br>
       </footer>
 
     </div>
-
   </body>
+  
 </html>
 
 
