--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ and front of the spinal cord as spinal nerve root. </br>
  <h2 clas="header-level-2">The project</h2>
 
 <p>First of all, i made some sketches of the spinal cord to better understand his structure and to obtain the points for the curve.</br>
-<img src="https://docs.google.com/document/d/1NeQ8byz5uE90N-mDLz-EQFlffp1izlG9j6QBx-rN5LA/edit"/>
+<img src="https://plus.google.com/u/0/photos/105260945454232121028/albums/5766447169083048929/5766447168139880866?hl=en"/>
 <img src="https://github.com/giuliab/final-project/material/nerve_sketch.jpg"/>
 
 </p>
