--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ and front of the spinal cord as spinal nerve root. </br>
  <h2 clas="header-level-2">The project</h2>
 
 <p>First of all, i made some sketches of the spinal cord to better understand his structure and to obtain the points for the curve.</br>
-<img src="https://github.com/giuliab/final-project/blob/master/material/base_sketch.jpg? raw=true" alt="Base"/>
-<img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg? raw=true" alt="Base"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/base_sketch.jpg?raw=true"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg?raw=true"/>
 
 </p>
  
