--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ During the body's growth and development, the spinal cord does not continue to l
 it therefore occupies only the first two-thirds of vertebral column. Cylindrical and slightly flattened, the spinal cord is about as 
 thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
 called cauda equina.</br>
-<img src="https://github.com/giuliab/final-project/blob/master/material/spinal3.png"/>
-<img src="https://github.com/giuliab/final-project/blob/master/material/Gray671.png"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/spinal3.png?raw=true"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/Gray671.png?raw=true"/>
 
 </p>
 <h3 clas="header-level-3">Spinal nerves</h3>
@@ -85,8 +85,8 @@ and front of the spinal cord as spinal nerve root. </br>
  <h2 clas="header-level-2">The project</h2>
 
 <p>First of all, i made some sketches of the spinal cord to better understand his structure and to obtain the points for the curve.</br>
-<img src="https://github.com/giuliab/final-project/blob/master/material/base_sketch.jpg? raw=true"/>
-<img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg? raw=true"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/base_sketch.jpg?raw=true"/>
+<img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg?raw=true"/>
 
 </p>
  
@@ -107,8 +107,9 @@ and front of the spinal cord as spinal nerve root. </br>
       </footer>
 
     </div>
-    
-  </body>  
+
+  </body>
+  
 </html>
 
 
