--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@ and front of the spinal cord as spinal nerve root. </br>
 <img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg?raw=true"/>
 
 </p>
- 
+ <h3 clas="header-level-3">The meninges</h2>
+ <p>These are the three protective layer of connective tissue for the spinal cord.</p>
+ <ul>
+ 		<li>The Dura Mater</li>
+ 		<li>The Arachnoid</li>
+ 		<li>The Pia Mater</li>
+ </ul>
+ To realize them, i started with the base of Dura mater by using <code></code>
  <h2 clas="header-level-2">Disclaimer</h2>
 	<p>I found the materials (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
       </section>
@@ -108,8 +115,14 @@ and front of the spinal cord as spinal nerve root. </br>
 
     </div>
 
+    
   </body>
+  <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+  <pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+  <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
   
 </html>
-
-
