--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@ and front of the spinal cord as spinal nerve root. </br>
  To realize them, i started with the base of Dura mater by using <code></code>
  <h2 clas="header-level-2">Disclaimer</h2>
 	<p>I found the materials (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
-      </section>
+     
+       <p><a href="https://github.com/cvdlab/plasm.js/tree/master/docs">PLASM doc</a></p>
+     	
+     </section>
 
       <footer>
         <span class="ribbon-outer">
