--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ and front of the spinal cord as spinal nerve root. </br>
  <h2 clas="header-level-2">Disclaimer</h2>
 	<p>I found the materials (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
      
-       <p><a href="https://github.com/cvdlab/plasm.js/tree/master/docs">PLASM doc</a></p>
+       <p>If you want to see PLASM documentation: <a href="https://github.com/cvdlab/plasm.js/tree/master/docs">PLASM</a></p>
      	
      </section>
 
