--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ and front of the spinal cord as spinal nerve root. </br>
     <li>The Pia Mater</li>
  </ul>
  <p>To realize them, i started with the base of Dura mater by drawning a <code>BEZIER</code> curves and obtaining the surface (shown in the picture below) with the point interpolation (always using <code>BEZIER</code>, but with selector S1) </p>
+ <img src=""/>
+ 
  <h2 clas="header-level-2">Disclaimer</h2>
   <p>I found the materials (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
       </section>
