--- a/index.html
+++ b/index.html
@@ -100,7 +100,14 @@ and front of the spinal cord as spinal nerve root. </br>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot1.png?raw=true"/>
 <p>The counturing surface've been realized through <code>createCylSurface</code>, in which i've used the PLASM function <code>CYLINDRICAL_SURFACE</code>.</p>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot2.png?raw=true"/>
+ <p>With the affine trasformation <code>T</code> and <code>S</code> applied  to the base and the contour, I realizad the other meninges and close them, as you can see in the following picture.</p>
+ <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot3.png?raw=true"/>
+ <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot4.png?raw=true"/>
+ <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot5.png?raw=true"/>
+ <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot6.png?raw=true"/>
+  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot7.png?raw=true"/>
  <h2 clas="header-level-2">Disclaimer</h2>
+
   <p>I found the materials (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
       </section>
 
