--- a/index.html
+++ b/index.html
@@ -89,23 +89,26 @@ and front of the spinal cord as spinal nerve root. </br>
 <img src="https://github.com/giuliab/final-project/blob/master/material/nerve_sketch.jpg?raw=true"/>
 
 </p>
- <h3 clas="header-level-3">The meninges</h2>
+ <h3 clas="header-level-3">The Meninges</h3>
  <p>These are the three protective layer of connective tissue for the spinal cord.</p>
  <ul>
-    <li>The Dura Mater</li>
-    <li>The Arachnoid</li>
-    <li>The Pia Mater</li>
+    <li>The Dura Mater: is the outermost layer, and it forms a tough protective coating.</li>
+    <li>The Arachnoid: is the middle protective layer. Its name comes from the fact that the tissue has a spiderweb-like appearance.</li>
+    <li>The Pia Mater: is the innermost protective layer. It is very delicate and it is tightly associated with the surface of the spinal cord.</li>
  </ul>
  <p>To realize them, i started with the base of Dura mater by drawning a <code>BEZIER</code> curves and obtaining the surface (shown in the picture below) with the point interpolation (always using <code>BEZIER</code>, but with selector S1). </p>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot1.png?raw=true"/>
 <p>The counturing surface've been realized through <code>createCylSurface</code>, in which i've used the PLASM function <code>CYLINDRICAL_SURFACE</code>.</p>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot2.png?raw=true"/>
- <p>With the affine trasformation <code>T</code> and <code>S</code> applied  to the base and the contour, I realizad the other meninges and close them, as you can see in the following picture.</p>
+ <p>With the affine trasformation <code>T</code> and <code>S</code> applied  to the contour and the base, I realizad the other meninges and close them, as you can see in the following picture.</p>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot3.png?raw=true"/>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot4.png?raw=true"/>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot5.png?raw=true"/>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot6.png?raw=true"/>
   <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot7.png?raw=true"/>
+
+ <h3 clas="header-level-3">The Gray Matter</h3>
+<p></p>
  <h2 clas="header-level-2">Disclaimer</h2>
 
   <p>I found the materials (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
