--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ and front of the spinal cord as spinal nerve root. </br>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Page generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot and project implemented in and  <a href="https://github.com/cvdlab/plasm.js">PLASM</a></p>
+        <p>Page generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot and project implemented in <a href="https://github.com/cvdlab/plasm.js">PLASM</a></p>
         <span class="octocat"></span>
       </footer>
 
