--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ and front of the spinal cord as spinal nerve root. </br>
  <ul>
     <li><b>The Dura Mater:</b> is the outermost layer, and it forms a tough protective coating.</li>
     <li><b>The Arachnoid:</b> is the middle protective layer. Its name comes from the fact that the tissue has a spiderweb-like appearance.</li>
-    <li><b>The Pia Mater:<b> is the innermost protective layer. It is very delicate and it is tightly associated with the surface of the spinal cord.</li>
+    <li><b>The Pia Mater:</b> is the innermost protective layer. It is very delicate and it is tightly associated with the surface of the spinal cord.</li>
  </ul>
  <p>To realize them, i started with the base of Dura mater by drawning a <code>BEZIER</code> curves and obtaining the surface (shown in the picture below) with the point interpolation (always using <code>BEZIER</code>, but with selector S1). </p>
  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot1.png?raw=true"/>
