--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
   <img src="https://github.com/giuliab/final-project/blob/master/material/spinal4.jpeg?raw=true"/>
   <p>The gray matter of spinal cord is organizad into areas called <b>horns</b>, which are:
   <ul>
-    <li>Dorsal (back) horns: Neuron cell bodies here receive information from sensory nerve fibers all around the body about sensation, including touch, temperature, awareness of muscle activity, and balance.</li>
-   <li></li> 
-   <li></li>
+    <li>Dorsal (back) horns: neuron cell bodies here receive information from sensory nerve fibers all around the body about sensation, including touch, temperature, awareness of muscle activity, and balance.</li>
+   <li>Lateral (side) horns: existing only at certain levels of the spinal cord; neuron bodies in the lateral horns regulate the internal organs.</li> 
+   <li>Ventral (front) horns: these contain neuron bodies that send fibers to the skeletal muscles, cousing contraction and movement.</li>
   </ul>
   </p>
    <h2 clas="header-level-2">Disclaimer</h2>
