--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     To realize them, i used <code>BEZIER</code> curve and realize the surface through the points interpolation (alway using <code>Bezier</code> but with selector S1).
     </p>
     <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot8.png?raw=true"/>
+    <p>The nerve in the fiber tracts have been realized with <code>BEZIER</code> and the traslation, through the affine trasformation <code>T</code>, of the nerve choosen as a sample.</p>
 
-    <h4 clas="header-level-4">The Nerve in the fiber tracts</h4>
      <h2 clas="header-level-2">Disclaimer</h2>
 
       <p>I found some material (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
