--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     To realize them, i used <code>BEZIER</code> curve and realize the surface through the points interpolation (alway using <code>Bezier</code> but with selector S1).
     </p>
     <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot8.png?raw=true"/>
-    <p>The nerve in the fiber tracts have been realized with <code>BEZIER</code> and the traslation, through the affine trasformation <code>T</code>, of the nerve choosen as a sample.</p>
+    <p>The nerve in the fiber tracts have been realized with <code>BEZIER</code> and <code>CYLINDRICAL_SURFACE</code>and the traslation, through the affine trasformation <code>T</code>, of the nerve choosen as a sample.</p>
       <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot9.png?raw=true">The Sample nerve</img>
       <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot10.png?raw=true"/>
      <h2 clas="header-level-2">Disclaimer</h2>
