--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="ribbon-outer">
               <span class="ribbon-inner">
                 <h1>The Spinal Cord</h1>
-                <h2>A 3D representation of one of the most important piece of the Human Body</h2>
+                <h2>A 3D representation in PLASM.js</h2>
               </span>
               <span class="left-tail"></span>
               <span class="right-tail"></span>
