--- a/index.html
+++ b/index.html
@@ -124,8 +124,11 @@
       <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot10.png?raw=true">All the nerve</img>
        <h3 clas="header-level-3">Spinal Nerve and Sensory Root</h3>
        <p>The sensory nerve roor carries the impulses about bodily sensation. They converge to form sensory roots at the back of the spinal cord. Impulses are then conveyed to the brain via nerve fiber tracts.</p>
+       <p>Each spinal nerve has a dorsal (posterior) sensory root ganglion, 
+        which is a cluster of nerve cell bodies.</p>
        <img src="https://github.com/giuliab/final-project/blob/master/material/Spinal_Nerves.jpeg?raw=true"/>
-       <p></p>
+       <p>Th motor nerve root are bundles of fibers, which leave the front of the spinal cord. </p>
+       <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot14.png?raw=true"/>
      <h2 clas="header-level-2">Disclaimer</h2>
       <p>I found some material (including text and images) through <a href="www.google.com">Google</a>, <a href="http://it.wikipedia.org/">Wikipedia</a> and in the book <a href="http://us.dk.com/nf/Book/BookDisplay/0,,9780789479884,00.html?strSrchSql=Human+Body/The_Human_Body_Martyn_Page">The Human Body</a>, so they belong to their respective owners.</p>
           </section>
