--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
       called cauda equina.</br>
       <img src="https://github.com/giuliab/final-project/blob/master/material/spinal3.png?raw=true"/>
-      <img src="https://github.com/giuliab/final-project/blob/master/material/Gray671.png?raw=true"/>
+      <img src="https://github.com/giuliab/final-project/blob/master/material/Gray671.png?raw=true" heigth="500px"/>
 
       </p>
       <h3 clas="header-level-3">Spinal nerves</h3>
