--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <footer>
               <span class="ribbon-outer">
                 <span class="ribbon-inner">
-                  <p>Projects by <a href="https://github.com/GiuliaB">GiuliaB</a> can be found on <a href="https://github.com/cvdlab-cg/267055/tree/master/final-project">GitHub</a></p>
+                  <p>Projects by <a href="https://github.com/GiuliaB">267055</a> can be found on <a href="https://github.com/cvdlab-cg/267055/tree/master/final-project">GitHub</a></p>
                 </span>
                 <span class="left-tail"></span>
                 <span class="right-tail"></span>
