--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-      <!DOCTYPE html>
+        <!DOCTYPE html>
         <html>
           <head>
             <meta charset='utf-8'>
@@ -66,7 +66,7 @@
         <h3 clas="header-level-3">Extent of spinal cord</h3>
 
         <p>
-             <img align="left" src="https://github.com/giuliab/final-project/blob/master/material/spinal3.png?raw=true"/>
+             <img align="left" src="https://github.com/giuliab/final-project/blob/master/material/spinal3.png?raw=true" vspace="20"/>
         During the body's growth and development, the spinal cord does not continue to lengthen the way that the spinal bones do:
         it therefore occupies only the first two-thirds of vertebral column. Cylindrical and slightly flattened, the spinal cord is about as 
         thick as a finger for most of its length; extending from the lower part if the spinal cord is a cluster of individual nerve fiver 
