--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
          <li>Lateral (side) horns: existing only at certain levels of the spinal cord; neuron bodies in the lateral horns regulate the internal organs.</li> 
          <li>Ventral (front) horns: these contain neuron bodies that send fibers to the skeletal muscles, cousing contraction and movement.</li>
         </ul>
-        To realize them, i used <code>BEZIER</code> curve and realize the surface through the points interpolation (alway using <code>Bezier</code> but with selector S1).
+        To realize them, i used <code>BEZIER</code> curve and realize the surface through the points interpolation (alway using <code>BEZIER</code> but with selector S1).
         </p>
         <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot8.png?raw=true"/>
         <p>The nerve in the fiber tracts have been realized with <code>BEZIER</code> and <code>CYLINDRICAL_SURFACE</code>and the traslation, through the affine trasformation <code>T</code>, of the nerve choosen as a sample.</p>
