--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
         tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.
         </br>
-        <img src="http://www.daviddarling.info/images/spinal_cord_cut-away.jpg" height="300"/>
+        <img align="left" src="http://www.daviddarling.info/images/spinal_cord_cut-away.jpg" height="350"/>
         </p>
 
         <h3 clas="header-level-3">Extent of spinal cord</h3>
