--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                    <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot14.png?raw=true"/>
                      <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot13.png?raw=true"/>
                      <p>The fibers conduct impulses from the central nervous system to control voluntary movement and involuntary processes such as digestion.</p>
-                     <p>The most difficult part starts now, because the nerves aren't symmetrical, then i can't use the affine trasformations. But, at the end, by changing the control points and applied the right functions, i obtain the following model:</p>
+                     <p>The nerves aren't symmetrical, then i can't use the affine trasformations. But by changing the control points and applied the right functions, i obtain the following model:</p>
                        <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot15.png?raw=true"/>
                          <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot16.png?raw=true"/>
                  <h2 clas="header-level-2">Disclaimer</h2>
