--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                    <p>Each spinal nerve has a dorsal (posterior) sensory root ganglion, 
                     which is a cluster of nerve cell bodies.</p>
                    <img src="https://github.com/giuliab/final-project/blob/master/material/Spinal_Nerves.jpeg?raw=true"/>
-                   <p>Th motor nerve root are bundles of fibers, which leave the front of the spinal cord. I realized them with my function <code>createConicalSurface</code>, which help me drawning the <code>CONICAL_SURFACE</code>.</p>
+                   <p>The motor nerve root are bundles of fibers, which leave the front of the spinal cord. I realized them with my function <code>createConicalSurface</code>, which help me drawning the <code>CONICAL_SURFACE</code>.</p>
                    <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot14.png?raw=true"/>
                      <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot13.png?raw=true"/>
                      <p>The fibers conduct impulses from the central nervous system to control voluntary movement and involuntary processes such as digestion.</p>
