--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 It contains two types of tissue. The inner core is gray matter made up of nerve cell bodies,
                 unmyelinated axons, glial cells and blood vessels; the outer white matter is mainly composed of 
                 tracts of myelinated axons thath relay impulses to and from the spinal cord and the brain.
-                 </br>
-                The position of the medulla spinalis varies with the movements of the vertebral column, 
+                 </p>
+               <p>The position of the medulla spinalis varies with the movements of the vertebral column, 
                 its lower extremity being drawn slightly upward when the column is flexed. 
                 It also varies at different periods of life; up to the third month of fetal life the medulla
                 spinalis is as long as the vertebral canal, but from this stage onward the vertebral column 
