--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                  </ul>
                  <p>To realize them, i started with the base of Dura mater by drawning a <code>BEZIER</code> curves and obtaining the surface (shown in the picture below) with the point interpolation (always using <code>BEZIER</code>, but with selector S1). </p>
                  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot1.png?raw=true"/>
-                <p>The counturing surface've been realized through <code>createCylSurface</code>, in which i've used the PLASM function <code>CYLINDRICAL_SURFACE</code>.</p>
+                <p>The boundary surface've been realized through <code>createCylSurface</code>, in which i've used the PLASM function <code>CYLINDRICAL_SURFACE</code>.</p>
                  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot2.png?raw=true"/>
                  <p>With the affine trasformation <code>T</code> and <code>S</code> applied  to the contour and the base, I realizad the other meninges and close them, as you can see in the following picture.</p>
                  <img src="https://github.com/giuliab/final-project/blob/master/material/Snapshot3.png?raw=true"/>
